send kridip branch

--- a/setting.html
+++ b/setting.html
@@ -6,8 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <div>
-        <h1>Welcome</h1>
-    </div>
+    <h1>Settings</h1>
 </body>
 </html>
